samples/_failures_safe/1761277102_72e86f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04dd9863.c: In function ‘main’:
./samples/SAFE/__tmp_04dd9863.c:145:10: error: expected ‘;’ at end of input
  145 |     clock
      |          ^
      |          ;
./samples/SAFE/__tmp_04dd9863.c:145:5: error: expected declaration or statement at end of input
  145 |     clock
      |     ^~~~~
